--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,9 +17,10 @@ steps:
     projects: '**/*.csproj
 
 - task: DotNetCoreCLI@2
-  displayName: 'Build project'
+  displayName: 'Build the project - Release'
   inputs:
     command: 'build'
-    projects: '**/*.csproj
+    arguments: '--no-restore --configuration Release'
+    projects: '**/*.csproj'
     
 
